[project]
name = "ceph-perf-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]

[tool.setuptools]
py-modules = ["cephfs_perf_lib", "cephfs_fio_runner", "cephfs_perf_runner", "cephfs_sfs2020_runner", "cephfs_tool_bench_runner"]
packages = ["lib", "lib.fs", "lib.ganesha", "lib.mount", "lib.runner", "lib.workload"]

[project.scripts]
cephfs-fio-runner = "cephfs_fio_runner:main"
cephfs-perf-runner = "cephfs_perf_runner:main"
cephfs-sfs2020-runner = "cephfs_sfs2020_runner:main"
cephfs-tool-bench-runner = "cephfs_tool_bench_runner:main"
